# contester

./: .env.example  INSTALL_WINDOWS.md  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml  wsgi.py
backend/docker/: entrypoint-web.sh  entrypoint-worker.sh
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 202603120001_create_users_table.py  202603120002_create_contests_table.py  202603120003_create_problems_table.py  202603120004_create_test_cases_and_submissions_tables.py  202603120005_add_cpp_submission_support.py  202603120006_add_docker_judge_configuration_support.py
backend/src/contester/: __init__.py  app.py  auth.py  config.py  error_handlers.py  extensions.py  logging_config.py  request_validation.py  serializers.py  standings.py
backend/src/contester/api/: __init__.py  admin.py  admin_contests.py  admin_problems.py  admin_queue.py  admin_submissions.py  admin_test_cases.py  auth.py  health.py  (+4 more)
backend/src/contester_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_admin_submission_api.py  test_auth.py  test_contest_api.py  test_docker_runner.py  test_health.py  test_judge_time_limit_semantics.py  test_ordering_regression.py  test_positioning_api.py  test_problem_api.py  test_serializers.py  test_standings_api.py  test_submission_api.py  test_submission_ordering.py  test_submission_queue_api.py  test_submission_queue_service.py  test_test_case_api.py  test_test_case_bulk_upload_api.py  test_user.py
(+50 files in other folders)
